--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,25 +7,23 @@
 		android:layout_height="match_parent"
 		tools:context=".MainActivity">
 	<TextView
-			android:id="@+id/textViewMain1"
-			android:text="Vamos começar?"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			tools:layout_editor_absoluteY="43dp"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			android:textColor="@color/black"
-			android:textSize="22sp"
-			android:fontFamily="serif"
-			tools:ignore="MissingConstraints"/>
-	<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/recycler_view1"
-			android:padding="4dp"
-			android:clipToPadding="false"
+			android:id="@+id/txtUserInput"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			tools:listitem="@layout/item"
-
+			android:layout_height="130dp"
+			android:background="@color/colorPrimary"
+			android:text="Informações Usuario"
+			android:textColor="@color/black"
+			android:padding="20dp"
+			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
 
 	/>
-</RelativeLayout>
+
+	<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerViewItem"
+			android:layout_height="400dp"
+			android:layout_width="match_parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			tools:listitem="@layout/item"
+			android:layout_alignParentBottom="true" app:layout_constraintTop_toBottomOf="@+id/txtUserInput"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
