--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		android:layout_margin="4dp"
+		android:layout_width="match_parent"
+		android:layout_height="80dp"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:background="#F5F5F5"
 		tools:showIn="@layout/activity_main"
-
 >
 	<RelativeLayout
 			android:layout_width="match_parent"
@@ -15,37 +15,37 @@
 	>
 
 		<ImageView
-				android:id="@+id/image_view"
+				android:id="@+id/imageViewItem"
 				android:layout_width="50dp"
 				android:layout_height="50dp"
-				android:layout_marginEnd="8dp"
 				android:src="@drawable/ic_baseline_local_drink_24"
 		/>
 		<TextView
-				android:id="@+id/text_view_1"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:id="@+id/textViewItemName"
+				android:layout_height="44dp"
+				android:layout_width="223dp"
 				android:text="Beber água"
-				android:layout_toEndOf="@id/image_view"
-				android:textSize="18sp"
+				android:textSize="16dp"
 				android:textStyle="bold"
-		></TextView>
+				android:layout_marginStart="39dp"
+				android:layout_alignParentEnd="true"
+				android:layout_marginEnd="83dp"
+				android:layout_toEndOf="@+id/imageViewItem"></TextView>
 		<TextView
-				android:id="@+id/text_view_2"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="3L"
-				android:layout_toEndOf="@+id/image_view"
-				android:layout_below="@+id/text_view_1"
-		/>
-		<Switch
-				android:text="Switch"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/switch1" android:layout_alignParentEnd="true"
-				android:layout_marginEnd="313dp"
-				android:layout_marginStart="180dp" android:layout_alignParentStart="true"/>
+				android:id="@+id/textViewItemDescrip"
+				android:layout_width="60dp"
+				android:layout_height="60dp"
+				android:text="3Litros"
+				android:layout_alignParentEnd="true" android:layout_marginEnd="379dp"
+				android:layout_toEndOf="@+id/textViewItemName" android:layout_marginStart="-150dp"/>
 
-
+		<ImageView
+				android:id="@+id/imageViewItemAdd"
+				android:layout_width="50dp"
+				android:layout_height="50dp"
+				android:layout_marginEnd="0dp"
+				android:src="@drawable/ic_baseline_add_circle_outline_24"
+				android:layout_alignParentEnd="true"/>
 	</RelativeLayout>
 
 </androidx.cardview.widget.CardView>
