--- a/app/src/main/res/drawable/ic_baseline_local_drink_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_local_drink_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#D223CF"
+<vector android:height="24dp" android:tint="#535bfe"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white"
